--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/tailwindcss": "^3.0.11",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
